--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.3.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^7.0.3",
@@ -18,6 +19,7 @@
     "astro": "^5.3.0",
     "astro-icon": "^1.1.5",
     "astro-pagefind": "^1.7.0",
+    "daisyui": "^5.1.4",
     "lozad": "^1.16.0",
     "overlayscrollbars": "^2.10.1",
     "svelte": "^5.17.4",
@@ -30,6 +32,7 @@
     "@iconify-json/dashicons": "^1.2.1",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/line-md": "^1.2.5",
+    "@iconify-json/lucide": "^1.2.66",
     "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/mingcute": "^1.2.3",
     "@iconify-json/ooui": "^1.2.5",
