--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
-{
-  "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+{  
+  "extends": "astro/tsconfigs/strict",  
+  "compilerOptions": {  
+    "baseUrl": ".",  
+    "paths": {  
+      "@/*": ["src/*"]  
+    }  
+  },  
+  "include": [".astro/types.d.ts", "**/*"],  
+  "exclude": ["dist"]  
 }
