--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/line-md": "^1.2.5",
     "@iconify-json/lucide": "^1.2.66",
+    "@iconify-json/material-symbols": "^1.2.33",
     "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/mingcute": "^1.2.3",
     "@iconify-json/ooui": "^1.2.5",
